ingress-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: default
spec:
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 5678
